--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
   "homepage": "http://BigunetsT.github.io/goit-react-hw-06-phonebook",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
